Again Final prep third time with responsivess fully for Netlify deployment with cross image fix

--- a/src/components/TDL-Maindiv.css
+++ b/src/components/TDL-Maindiv.css
@@ -10,6 +10,7 @@
     background-color: #282c34;
     border: 7px solid rgb(234, 140, 33);
     display: flex;
+    flex-direction: column;
     background-color: pink;
     flex-direction: column;
     min-height: 100vh;  /*for grwoing we use min-height remember*/
