4th commit which is correction over 3rd commit of icon used in fonts i.e ~

--- a/src/components/tdl-mainbox.css
+++ b/src/components/tdl-mainbox.css
@@ -1,8 +1,7 @@
 /* Import Open Sans weights */
-@import url('~@fontsource/open-sans/400.css');
-@import url('~@fontsource/open-sans/600.css');
-@import url('~@fontsource/open-sans/700.css');
-
+@import url('@fontsource/open-sans/400.css');
+@import url('@fontsource/open-sans/600.css');
+@import url('@fontsource/open-sans/700.css');
 /* Global font */
 body {
   font-family: 'Open Sans';
